Move Astropy and STScI credits to preface

--- a/notebooks/photometry/01.04-Background-estimation.ipynb
+++ b/notebooks/photometry/01.04-Background-estimation.ipynb
@@ -9,35 +9,19 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
-   "source": [
-    "<center><i>Made possible by the Astropy Project and ScienceBetter Consulting through financial support from the Community Software Initiative at the Space Telescope Science Institute.</i></center>\n",
-    "\n",
-    "<a id=\"title_ID\"></a>\n",
-    "\n",
-    "<a href=\"http://photutils.readthedocs.io/en/stable/index.html\"><img src=\"https://photutils.readthedocs.io/en/stable/_static/photutils_banner.svg\" width=300></a>\n",
-    "\n",
-    "\n",
-    "---"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### What is background estimation?\n",
+    "## What is background estimation?\n",
     "In order to most accurately do photometric analysis of celestial sources in image data, it is important to estimate and subtract the image background. Any astronomical image will have background noise, due to both detector effects and background emission from the night sky. This noise can be modeled as uniform, or as varying with position on the detector. \n",
     "\n",
     "The `photutils` package provides tools for estimating 2-dimensional background flux, which can then be subtracted from an image to ensure the most accurate photometry possible.\n",
     "\n",
-    "##### What does this tutorial include?\n",
+    "### What does this tutorial include?\n",
     "This tutorial covers the basics of background estimation and subtraction, including the following methods:\n",
     "- Scalar Background Estimation\n",
     "- 2-D Background Estimation\n",
     "\n",
-    "##### Which data are used in this tutorial?\n",
+    "### Which data are used in this tutorial?\n",
     "We will be manipulating Hubble eXtreme Deep Field (XDF) data, which was collected using the Advanced Camera for Surveys (ACS) on Hubble between 2002 and 2012. The image we use here is the result of 1.8 million seconds (500 hours!) of exposure time, and includes some of the faintest and most distant galaxies that have ever been observed. \n",
     "\n",
     "Background subtraction is essential for accurate photometric analysis of astronomical data like the XDF.\n",
@@ -672,36 +656,7 @@
     "---\n",
     "## Conclusions\n",
     "\n",
-    "The `photutils` package provides a powerful tool in the `Background2D` class, allowing users to easily estimate and subtract spatially variant background signals from their data.\n",
-    "\n",
-    "**To continue with this `photutils` tutorial, go on to the [source detection notebook](../02_source_detection/02_source_detection.ipynb).**"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "---\n",
-    "## Additional Resources\n",
-    "For more examples and details, please visit the [photutils](http://photutils.readthedocs.io/en/stable/index.html) documentation."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "---\n",
-    "## About this Notebook\n",
-    "**Authors:** Lauren Chambers (lchambers@stsci.edu), Erik Tollerud (etollerud@stsci.edu)\n",
-    "<br>**Updated:** May 2019"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "[Top of Page](#title_ID)\n",
-    "<img style=\"float: right;\" src=\"https://raw.githubusercontent.com/spacetelescope/notebooks/master/assets/stsci_pri_combo_mark_horizonal_white_bkgd.png\" alt=\"STScI logo\" width=\"200px\"/>"
+    "The `photutils` package provides a powerful tool in the `Background2D` class, allowing users to easily estimate and subtract spatially variant background signals from their data.\n"
    ]
   }
  ],
