Minor editing and use myst notebook for notes

--- a/notebooks/photometry/01.04-Background-estimation.ipynb
+++ b/notebooks/photometry/01.04-Background-estimation.ipynb
@@ -33,19 +33,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-block alert-info\">\n",
-    "\n",
-    "<b>Note:</b> This notebook focuses on <i>global background estimation</i>. Local background subtraction with <i>annulus apertures</i> is demonstrated in the <a href=\"../03_aperture_photometry/03_aperture_photometry.ipynb\">aperture photometry notebook</a>.\n",
-    "\n",
-    "</div>\n",
-    "\n",
-    "<div class=\"alert alert-block alert-warning\">\n",
-    "    \n",
-    "<b>Important:</b> Before proceeding, please be sure to update your versions of <code>astropy</code>, <code>matplotlib</code>, and <code>photutils</code>, or this notebook may not work properly. Or, if you don't want to handle packages individually, you can always use (and keep updated!) the <a href=\"https://astroconda.readthedocs.io\">AstroConda</a> distribution.\n",
-    " \n",
-    "</div>\n",
-    "\n",
-    "---"
+    "```{note}\n",
+    "This notebook focuses on *global* background estimation. *Local* background subtraction with annulus apertures is demonstrated in FILL ME IN.\n",
+    "```\n"
    ]
   },
   {
@@ -77,6 +67,9 @@
     "from astropy.visualization import ImageNormalize, LogStretch\n",
     "import matplotlib.pyplot as plt\n",
     "from matplotlib.ticker import LogLocator\n",
+    "\n",
+    "from photutils.segmentation import detect_threshold, detect_sources\n",
+    "from photutils.utils import circular_footprint\n",
     "\n",
     "# Show plots in the notebook\n",
     "%matplotlib inline"
@@ -225,7 +218,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Mask data"
+    "## Mask non-data portions of array"
    ]
   },
   {
@@ -329,7 +322,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "But what difference does this sigma clipping make? And how important is masking, anyway? Let's visualize these statistics to get an idea:"
+    "### Mask sources, then calculate scalar background\n",
+    "\n",
+    "As discussed in [FILL IN LINK](FILL IN LINK), the most accurate estimate of the scalar background is obtained when the sources are masked first. The cell below does that procedure."
    ]
   },
   {
@@ -338,25 +333,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from photutils.segmentation import detect_threshold, detect_sources\n",
-    "from photutils.utils import circular_footprint\n",
-    "\n",
+    "# Set up sigma clipping\n",
     "sigma_clip = SigmaClip(sigma=3.0, maxiters=10)\n",
+    "\n",
     "threshold = detect_threshold(xdf_image.data, nsigma=2.0, sigma_clip=sigma_clip, mask=xdf_image.mask)\n",
     "segment_img = detect_sources(xdf_image.data, threshold, npixels=10, mask=xdf_image.mask)\n",
     "footprint = circular_footprint(radius=10)\n",
     "\n",
+    "# Make the source mask a circle of radius 10 around each detected source\n",
     "source_mask = segment_img.make_source_mask(footprint=footprint)\n",
-    "mask_clip_mean, mask_clip_med, mask_clip_std  = sigma_clipped_stats(data, sigma=3, mask=source_mask)\n"
+    "\n",
+    "# Compute the stats\n",
+    "source_mask_clip_mean, source_mask_clip_med, source_mask_clip_std  = sigma_clipped_stats(data, sigma=3, mask=source_mask)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "mask_clip_mean, mask_clip_med"
+    "But what difference does this sigma clipping make? And how important is masking, anyway? Let's visualize these statistics to get an idea:"
    ]
   },
   {
@@ -374,7 +369,7 @@
     "ax2.hist(xdf_image.data[~xdf_image.mask], bins=100, range=flux_range)\n",
     "\n",
     "# Plot lines for each kind of mean\n",
-    "ax1.axvline(mean, label='Masked and Clipped', c='C1', ls='-.', lw=3)\n",
+    "ax1.axvline(mean, label='Non-data masked and Clipped', c='C1', ls='-.', lw=3)\n",
     "ax1.axvline(np.average(xdf_image[~xdf_image.mask]), label='Masked', c='C2', lw=3)\n",
     "ax1.axvline(stats_nomask[0], label='Clipped', c='C3', ls=':', lw=3)\n",
     "ax1.axvline(mask_clip_mean, label='Sources masked and clipped', c='C4', lw=3)\n",
@@ -387,7 +382,7 @@
     "\n",
     "# Plot lines for each kind of median\n",
     "# Note: use np.ma.median rather than np.median for masked arrays\n",
-    "ax2.axvline(median, label='Masked and Clipped', c='C1', ls='-.', lw=3)\n",
+    "ax2.axvline(median, label='Non-data masked and Clipped', c='C1', ls='-.', lw=3)\n",
     "ax2.axvline(np.ma.median(xdf_image[~xdf_image.mask]), label='Masked', c='C2', lw=3)\n",
     "ax2.axvline(mask_clip_med, label='Sources masked and clipped', c='C4', lw=3)\n",
     "ax2.axvline(stats_nomask[1], label='Clipped', c='C3', ls=':', lw=3)\n",
@@ -406,7 +401,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Just from simply looking at the distribution of the data, it is pretty easy to see how sigma-clipping and masking improve the calculation of the mean and median: the masked & sigma-clipped values are closest to the center of the distribution in both cases. It's also worthwhile to note that the median does a better job even without masking or clipping!\n",
+    "Just from simply looking at the distribution of the data, it is pretty easy to see how sigma-clipping and masking improve the calculation of the mean and median: the masked and sigma-clipped values are closest to the center of the distribution in both cases. It's also worthwhile to note that the median does a better job even without masking or clipping! Finally, note that using the median with sigma clipping gets essentially the same results as masking the sources along with sigma clipping.\n",
     "\n",
     "### Subtract scalar background value\n",
     "\n",
@@ -467,21 +462,6 @@
     "Note that both plots above use the same normalization scheme, represented by the colorbar on the right. That is to say, if two pixels have the same color in both arrays, they have the same value.\n",
     "\n",
     "That looks better! You can tell that the background is darker, especially in the top corner. However, the background still does not seem to be completely removed. In this case, the background varies spatially; it is two-dimensional. Thankfully, `photutils` includes functions to remove background like this."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-block alert-info\">\n",
-    "    \n",
-    "<h3>Exercises:</h3><br>\n",
-    "\n",
-    "Perform a median scalar background subtraction on our sigma-clipped data. Plot it and visually inspect it. How does it compare to the original data?\n",
-    "<br><br>\n",
-    "Compare the median background subtraction to the mean background subtraction. Which is better?\n",
-    "\n",
-    "</div>"
    ]
   },
   {
@@ -638,22 +618,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-block alert-info\">\n",
-    "    \n",
-    "<h3>Exercises:</h3><br>\n",
-    "\n",
-    "Calculate the standard deviation (with sigma-clipping and masking!) for the original data, the scalar background-subtracted data, and the 2D background-subtracted data. How do the values compare? Which has the smallest standard deviation?<br><br>\n",
-    "\n",
-    "Notice that the difference between each dataset's standard deviation is small - why might this be?\n",
-    "\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "---\n",
     "## Conclusions\n",
     "\n",
     "The `photutils` package provides a powerful tool in the `Background2D` class, allowing users to easily estimate and subtract spatially variant background signals from their data.\n"
