Fix variable name

--- a/notebooks/photometry/01.04-Background-estimation.ipynb
+++ b/notebooks/photometry/01.04-Background-estimation.ipynb
@@ -372,7 +372,7 @@
     "ax1.axvline(mean, label='Non-data masked and Clipped', c='C1', ls='-.', lw=3)\n",
     "ax1.axvline(np.average(xdf_image[~xdf_image.mask]), label='Masked', c='C2', lw=3)\n",
     "ax1.axvline(stats_nomask[0], label='Clipped', c='C3', ls=':', lw=3)\n",
-    "ax1.axvline(mask_clip_mean, label='Sources masked and clipped', c='C4', lw=3)\n",
+    "ax1.axvline(source_mask_clip_mean, label='Sources masked and clipped', c='C4', lw=3)\n",
     "ax1.axvline(np.average(xdf_image), label='Neither', c='C5', ls='--', lw=3)\n",
     "\n",
     "ax1.set_xlim(flux_range)\n",
@@ -384,7 +384,7 @@
     "# Note: use np.ma.median rather than np.median for masked arrays\n",
     "ax2.axvline(median, label='Non-data masked and Clipped', c='C1', ls='-.', lw=3)\n",
     "ax2.axvline(np.ma.median(xdf_image[~xdf_image.mask]), label='Masked', c='C2', lw=3)\n",
-    "ax2.axvline(mask_clip_med, label='Sources masked and clipped', c='C4', lw=3)\n",
+    "ax2.axvline(source_mask_clip_med, label='Sources masked and clipped', c='C4', lw=3)\n",
     "ax2.axvline(stats_nomask[1], label='Clipped', c='C3', ls=':', lw=3)\n",
     "ax2.axvline(np.ma.median(xdf_image), label='Neither', c='C5', ls='--', lw=3)\n",
     "\n",
