Heading clarifications and depth changes

--- a/notebooks/photometry/01.04-Background-estimation.ipynb
+++ b/notebooks/photometry/01.04-Background-estimation.ipynb
@@ -124,8 +124,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Modifying data\n",
-    "For the purposes of this notebook example, we're going to add a linear background effect from the top to the bottom of these data. But don't worry about this (pay no attention to that man behind the curtain!)."
+    "### Modify data by adding gradient\n",
+    "\n",
+    "For the purposes of this notebook example, we're going to add a linear background effect from the top to the bottom of these data. "
    ]
   },
   {
@@ -146,7 +147,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Data representation\n",
+    "### Data representation\n",
     "\n",
     "Throughout this notebook, we are going to store our images in Python using a `CCDData` object (see [Astropy documentation](http://docs.astropy.org/en/stable/nddata/index.html#ccddata-class-for-images)), which contains a `numpy` array in addition to metadata such as uncertainty, masks, or units. In this case, each image has units electrons (counts) per second."
    ]
