Remove data clipping before display
It is unclear to me why clipping would be the correct way to go, since
it alters the data displayed. Not clipping, and letting the image
normalization handle it seems fine.

--- a/notebooks/photometry/01.04-Background-estimation.ipynb
+++ b/notebooks/photometry/01.04-Background-estimation.ipynb
@@ -184,7 +184,7 @@
     "cmap.set_over(cmap.colors[-1])\n",
     "cmap.set_under(cmap.colors[0])\n",
     "cmap.set_bad('white') # Show masked data as white\n",
-    "xdf_image_clipped = np.clip(xdf_image, 1e-4, None) # clip to plot with logarithmic stretch\n",
+    "xdf_image_clipped = xdf_image #np.clip(xdf_image, 1e-4, None) # clip to plot with logarithmic stretch\n",
     "\n",
     "# Plot the data\n",
     "fitsplot = ax1.imshow(np.ma.masked_where(xdf_image.mask, xdf_image_clipped),\n",
@@ -429,7 +429,7 @@
     "ax1.set_title('Original Data')\n",
     "\n",
     "# Plot the subtracted data\n",
-    "xdf_scalar_bkgdsub_clipped = np.clip(xdf_scalar_bkgdsub, 1e-4, None) # clip to plot with logarithmic stretch\n",
+    "xdf_scalar_bkgdsub_clipped = xdf_scalar_bkgdsub # np.clip(xdf_scalar_bkgdsub, 1e-4, None) # clip to plot with logarithmic stretch\n",
     "fitsplot = ax2.imshow(np.ma.masked_where(xdf_scalar_bkgdsub.mask, xdf_scalar_bkgdsub_clipped), norm=norm_image)\n",
     "ax2.set_xlabel('X (pixels)')\n",
     "ax2.set_title('Scalar Background-Subtracted Data')\n",
@@ -517,7 +517,7 @@
     "fig, ax1 = plt.subplots(1, 1, figsize=(8, 8))\n",
     "\n",
     "# Plot the background\n",
-    "background_clipped = np.clip(bkg.background.data, 1e-4, None) # clip to plot with logarithmic stretch\n",
+    "background_clipped = bkg.background.data # np.clip(bkg.background.data, 1e-4, None) # clip to plot with logarithmic stretch\n",
     "fitsplot = ax1.imshow(np.ma.masked_where(xdf_image.mask, background_clipped), norm=norm_image)\n",
     "\n",
     "# Plot the meshes\n",
@@ -571,7 +571,7 @@
     "plt.tight_layout()\n",
     "\n",
     "# Define the normalization\n",
-    "xdf_2d_bkgdsub_clipped = np.clip(xdf_2d_bkgdsub, 1e-4, None) # clip to plot with logarithmic stretch\n",
+    "xdf_2d_bkgdsub_clipped = xdf_2d_bkgdsub # np.clip(xdf_2d_bkgdsub, 1e-4, None) # clip to plot with logarithmic stretch\n",
     "\n",
     "# Plot the scalar-subtracted data\n",
     "fitsplot = ax1.imshow(np.ma.masked_where(xdf_scalar_bkgdsub.mask, xdf_scalar_bkgdsub_clipped), norm=norm_image)\n",
@@ -634,7 +634,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
