A couple of code improvements
- Do not clip the data before plotting. The color map will take care of
  this.

- Move color bar formatting into a function so it can be reused
  throughout the notebook.

--- a/notebooks/photometry/01.04-Background-estimation.ipynb
+++ b/notebooks/photometry/01.04-Background-estimation.ipynb
@@ -178,28 +178,27 @@
     "# Set up the figure with subplots\n",
     "fig, ax1 = plt.subplots(1, 1, figsize=(8, 8))\n",
     "\n",
-    "# Set up the normalization and colormap\n",
-    "norm_image = ImageNormalize(vmin=1e-4, vmax=5e-2, stretch=LogStretch(), clip=False)\n",
+    "# Set up the normalization and colormap. The values of vmin and vmax are specific to this image\n",
+    "norm_image = ImageNormalize(vmin=1e-4, vmax=5e-2, stretch=LogStretch())\n",
     "cmap = plt.get_cmap('viridis')\n",
-    "cmap.set_over(cmap.colors[-1])\n",
-    "cmap.set_under(cmap.colors[0])\n",
-    "cmap.set_bad('white') # Show masked data as white\n",
-    "xdf_image_clipped = xdf_image #np.clip(xdf_image, 1e-4, None) # clip to plot with logarithmic stretch\n",
     "\n",
-    "# Plot the data\n",
-    "fitsplot = ax1.imshow(np.ma.masked_where(xdf_image.mask, xdf_image_clipped),\n",
+    "# Plot the data, with pixels masked as appropriate\n",
+    "fitsplot = ax1.imshow(np.ma.masked_where(xdf_image.mask, xdf_image),\n",
     "                      norm=norm_image, cmap=cmap)\n",
     "\n",
     "# Define the colorbar\n",
     "cbar = plt.colorbar(fitsplot, fraction=0.046, pad=0.04, ticks=LogLocator())\n",
     "\n",
-    "cbar.ax.yaxis.set_minor_locator(LogLocator(subs=range(1, 10)))\n",
+    "def format_colorbar(bar):\n",
+    "    # Add minor tickmarks\n",
+    "    bar.ax.yaxis.set_minor_locator(LogLocator(subs=range(1, 10)))\n",
     "\n",
-    "# ...and force the labels to be displayed as powers of ten\n",
-    "cbar.ax.set_yticks([1e-4, 1e-3, 1e-2])\n",
-    "labels = [f'$10^{{{pow:.0f}}}$' for pow in np.log10(cbar.ax.get_yticks())]\n",
-    "cbar.ax.set_yticklabels(labels)\n",
+    "    # Force the labels to be displayed as powers of ten and only at exact powers of ten\n",
+    "    bar.ax.set_yticks([1e-4, 1e-3, 1e-2])\n",
+    "    labels = [f'$10^{{{pow:.0f}}}$' for pow in np.log10(bar.ax.get_yticks())]\n",
+    "    bar.ax.set_yticklabels(labels)\n",
     "\n",
+    "format_colorbar(cbar)\n",
     "\n",
     "# Define labels\n",
     "cbar.set_label(r'Flux Count Rate ({})'.format(xdf_image.unit.to_string('latex')),\n",
@@ -251,18 +250,14 @@
     "ax1.set_title('Mask')\n",
     "\n",
     "# Plot the masked data\n",
-    "fitsplot = ax2.imshow(np.ma.masked_where(xdf_image.mask, xdf_image_clipped),\n",
+    "fitsplot = ax2.imshow(np.ma.masked_where(xdf_image.mask, xdf_image),\n",
     "                      norm=norm_image, cmap=cmap)\n",
     "\n",
     "# Define the colorbar and fix the labels\n",
     "cbar_ax = fig.add_axes([1, 0.09, 0.03, 0.87])\n",
     "cbar = fig.colorbar(fitsplot, cbar_ax, ticks=LogLocator())\n",
     "\n",
-    "# ...and force the labels to be displayed as powers of ten\n",
-    "cbar.ax.set_yticks([1e-4, 1e-3, 1e-2])\n",
-    "labels = [f'$10^{{{pow:.0f}}}$' for pow in np.log10(cbar.ax.get_yticks())]\n",
-    "cbar.ax.set_yticklabels(labels)\n",
-    "\n",
+    "format_colorbar(cbar)\n",
     "\n",
     "cbar.set_label(r'Flux Count Rate ({})'.format(xdf_image.unit.to_string('latex')),\n",
     "               rotation=270, labelpad=30)\n",
@@ -423,14 +418,13 @@
     "plt.tight_layout()\n",
     "\n",
     "# Plot the original data\n",
-    "fitsplot = ax1.imshow(np.ma.masked_where(xdf_image.mask, xdf_image_clipped), norm=norm_image)\n",
+    "fitsplot = ax1.imshow(np.ma.masked_where(xdf_image.mask, xdf_image), norm=norm_image)\n",
     "ax1.set_xlabel('X (pixels)')\n",
     "ax1.set_ylabel('Y (pixels)')\n",
     "ax1.set_title('Original Data')\n",
     "\n",
     "# Plot the subtracted data\n",
-    "xdf_scalar_bkgdsub_clipped = xdf_scalar_bkgdsub # np.clip(xdf_scalar_bkgdsub, 1e-4, None) # clip to plot with logarithmic stretch\n",
-    "fitsplot = ax2.imshow(np.ma.masked_where(xdf_scalar_bkgdsub.mask, xdf_scalar_bkgdsub_clipped), norm=norm_image)\n",
+    "fitsplot = ax2.imshow(np.ma.masked_where(xdf_scalar_bkgdsub.mask, xdf_scalar_bkgdsub), norm=norm_image)\n",
     "ax2.set_xlabel('X (pixels)')\n",
     "ax2.set_title('Scalar Background-Subtracted Data')\n",
     "\n",
@@ -438,12 +432,8 @@
     "cbar_ax = fig.add_axes([1, 0.09, 0.03, 0.87])\n",
     "\n",
     "cbar = fig.colorbar(fitsplot, cbar_ax, ticks=LogLocator())\n",
-    "cbar.ax.yaxis.set_minor_locator(LogLocator(subs=range(1, 10)))\n",
     "\n",
-    "# ...and force the labels to be displayed as powers of ten\n",
-    "cbar.ax.set_yticks([1e-4, 1e-3, 1e-2])\n",
-    "labels = [f'$10^{{{pow:.0f}}}$' for pow in np.log10(cbar.ax.get_yticks())]\n",
-    "cbar.ax.set_yticklabels(labels)\n",
+    "format_colorbar(cbar)\n",
     "\n",
     "cbar.set_label(r'Flux Count Rate ({})'.format(xdf_image.unit.to_string('latex')),\n",
     "               rotation=270, labelpad=30)"
@@ -517,8 +507,7 @@
     "fig, ax1 = plt.subplots(1, 1, figsize=(8, 8))\n",
     "\n",
     "# Plot the background\n",
-    "background_clipped = bkg.background.data # np.clip(bkg.background.data, 1e-4, None) # clip to plot with logarithmic stretch\n",
-    "fitsplot = ax1.imshow(np.ma.masked_where(xdf_image.mask, background_clipped), norm=norm_image)\n",
+    "fitsplot = ax1.imshow(np.ma.masked_where(xdf_image.mask, bkg.background.data ), norm=norm_image)\n",
     "\n",
     "# Plot the meshes\n",
     "bkg.plot_meshes(outlines=True, color='lightgrey')\n",
@@ -526,12 +515,7 @@
     "# Define the colorbar\n",
     "cbar = plt.colorbar(fitsplot, fraction=0.046, pad=0.04, ticks=LogLocator())\n",
     "\n",
-    "cbar.ax.yaxis.set_minor_locator(LogLocator(subs=range(1, 10)))\n",
-    "\n",
-    "# ...and force the labels to be displayed as powers of ten\n",
-    "cbar.ax.set_yticks([1e-4, 1e-3, 1e-2])\n",
-    "labels = [f'$10^{{{pow:.0f}}}$' for pow in np.log10(cbar.ax.get_yticks())]\n",
-    "cbar.ax.set_yticklabels(labels)\n",
+    "format_colorbar(cbar)\n",
     "\n",
     "# Define labels\n",
     "cbar.set_label(r'Flux Count Rate ({})'.format(xdf_image.unit.to_string('latex')),\n",
@@ -570,11 +554,8 @@
     "fig, [ax1, ax2] = plt.subplots(1, 2, figsize=(12, 6), sharey=True)\n",
     "plt.tight_layout()\n",
     "\n",
-    "# Define the normalization\n",
-    "xdf_2d_bkgdsub_clipped = xdf_2d_bkgdsub # np.clip(xdf_2d_bkgdsub, 1e-4, None) # clip to plot with logarithmic stretch\n",
-    "\n",
     "# Plot the scalar-subtracted data\n",
-    "fitsplot = ax1.imshow(np.ma.masked_where(xdf_scalar_bkgdsub.mask, xdf_scalar_bkgdsub_clipped), norm=norm_image)\n",
+    "fitsplot = ax1.imshow(np.ma.masked_where(xdf_scalar_bkgdsub.mask, xdf_scalar_bkgdsub), norm=norm_image)\n",
     "cbar.set_label(r'Flux Count Rate ({})'.format(xdf_image.unit.to_string('latex')),\n",
     "               rotation=270, labelpad=30)\n",
     "ax1.set_ylabel('Y (pixels)')\n",
@@ -582,7 +563,7 @@
     "ax1.set_title('Scalar Background-Subtracted Data')\n",
     "\n",
     "# Plot the 2D-subtracted data\n",
-    "fitsplot = ax2.imshow(np.ma.masked_where(xdf_2d_bkgdsub.mask, xdf_2d_bkgdsub_clipped), norm=norm_image)\n",
+    "fitsplot = ax2.imshow(np.ma.masked_where(xdf_2d_bkgdsub.mask, xdf_2d_bkgdsub), norm=norm_image)\n",
     "ax2.set_xlabel('X (pixels)')\n",
     "ax2.set_title('2D Background-Subtracted Data')\n",
     "\n",
