Fix errors in calculation of image statistics

--- a/notebooks/photometry/01.04-Background-estimation.ipynb
+++ b/notebooks/photometry/01.04-Background-estimation.ipynb
@@ -311,6 +311,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Calculate scalar bkdg value without sigma clipping\n",
+    "\n",
+    "Here we will calculate the mean, median, and mode of the dataset without using sigma clipping. \n",
+    "\n",
+    "As above, we do this first taking into account the mask and then ignoring the mask."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mean_noclip_mask = np.mean(xdf_image.data[~xdf_image.mask])\n",
+    "median_noclip_mask = np.median(xdf_image.data[~xdf_image.mask])\n",
+    "\n",
+    "mean_noclip_nomask = np.mean(xdf_image.data)\n",
+    "median_noclip_nomask = np.median(xdf_image.data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Mask sources, then calculate scalar background\n",
     "\n",
     "As discussed in [FILL IN LINK](FILL IN LINK), the most accurate estimate of the scalar background is obtained when the sources are masked first. The cell below does that procedure."
@@ -332,8 +356,11 @@
     "# Make the source mask a circle of radius 10 around each detected source\n",
     "source_mask = segment_img.make_source_mask(footprint=footprint)\n",
     "\n",
+    "# Combine the source mask with the data mask\n",
+    "full_mask = source_mask | xdf_image.mask\n",
+    "\n",
     "# Compute the stats\n",
-    "source_mask_clip_mean, source_mask_clip_med, source_mask_clip_std  = sigma_clipped_stats(data, sigma=3, mask=source_mask)"
+    "source_mask_clip_mean, source_mask_clip_med, source_mask_clip_std  = sigma_clipped_stats(data, sigma=3, mask=full_mask)"
    ]
   },
   {
@@ -359,10 +386,10 @@
     "\n",
     "# Plot lines for each kind of mean\n",
     "ax1.axvline(mean, label='Non-data masked and Clipped', c='C1', ls='-.', lw=3)\n",
-    "ax1.axvline(np.average(xdf_image[~xdf_image.mask]), label='Masked', c='C2', lw=3)\n",
-    "ax1.axvline(stats_nomask[0], label='Clipped', c='C3', ls=':', lw=3)\n",
+    "ax1.axvline(mean_noclip_mask, label='Masked', c='C2', lw=3)\n",
+    "ax1.axvline(stats_nomask[0], label='Clipped', c='C3', ls=':', lw=5)\n",
     "ax1.axvline(source_mask_clip_mean, label='Sources masked and clipped', c='C4', lw=3)\n",
-    "ax1.axvline(np.average(xdf_image), label='Neither', c='C5', ls='--', lw=3)\n",
+    "ax1.axvline(mean_noclip_nomask, label='Neither', c='C5', ls='--', lw=3)\n",
     "\n",
     "ax1.set_xlim(flux_range)\n",
     "ax1.set_xlabel(r'Flux Count Rate ({})'.format(xdf_image.unit.to_string('latex')), fontsize=14)\n",
@@ -372,10 +399,10 @@
     "# Plot lines for each kind of median\n",
     "# Note: use np.ma.median rather than np.median for masked arrays\n",
     "ax2.axvline(median, label='Non-data masked and Clipped', c='C1', ls='-.', lw=3)\n",
-    "ax2.axvline(np.ma.median(xdf_image[~xdf_image.mask]), label='Masked', c='C2', lw=3)\n",
+    "ax2.axvline(median_noclip_mask, label='Masked', c='C2', lw=3)\n",
     "ax2.axvline(source_mask_clip_med, label='Sources masked and clipped', c='C4', lw=3)\n",
-    "ax2.axvline(stats_nomask[1], label='Clipped', c='C3', ls=':', lw=3)\n",
-    "ax2.axvline(np.ma.median(xdf_image), label='Neither', c='C5', ls='--', lw=3)\n",
+    "ax2.axvline(stats_nomask[1], label='Clipped', c='C3', ls=':', lw=5)\n",
+    "ax2.axvline(median_noclip_nomask, label='Neither', c='C5', ls='--', lw=3)\n",
     "\n",
     "\n",
     "ax2.set_xlim(flux_range)\n",
