Organize background subtraction into a single section

--- a/notebooks/photometry/01.01.01-Background-removal-simulated-data.ipynb
+++ b/notebooks/photometry/01.01.01-Background-removal-simulated-data.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Background removal (for source detection)"
+    "# Overview of background subtraction using simulated data"
    ]
   },
   {
@@ -22,7 +22,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## \"Simple\" approach: median or other scalar estimator of background \n",
+    "## Simple approach: median or other scalar estimator of background \n",
     "\n",
     "The simplest way to estimate the background is with a single number, perhaps the mean or median of the data. The problem with that approach is that the distribution of pixel value in an astronomical image is not symmetric. Most of the pixels have values near zero while a small number have significantly higher values.\n",
     "\n",
@@ -64,7 +64,6 @@
     "from astropy.visualization.mpl_normalize import ImageNormalize\n",
     "from astropy.visualization import hist\n",
     "from astropy.stats import sigma_clipped_stats, SigmaClip\n",
-    "\n",
     "\n",
     "data = make_100gaussians_image()\n",
     "\n",
@@ -250,6 +249,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### A caveat about the \"best\" approach\n",
+    "\n",
+    "Note that the difference in value between the estimates of the background displayed above are not large. The one that is furthest off, the mean of all of the values, differs from the true value by half a count. Whether that is significant or not depends on what science you are trying to do, what sources of error are present in your data and how large they are, and how you will treat the data in later steps. \n",
+    "\n",
+    "That is not to say there is anything wrong about the approach described in this section; it is just a reminder that the right choice for your data and science is not necessary what is described here as the best choice."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Two dimensional background \n",
     "\n",
     "If the background is not uniform (as happens, for example, on a night with moonlight) then using a single value to represent that background will not be effective. Instead, one constructs a background array. It is constructed by breaking the image into pieces, calcuating a scalar background estimate as above, and building those back into a two-dimensional image. \n",
@@ -292,7 +302,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Choose your options\n",
+    "### Choose your options for constructing the background \n",
     "\n",
     "For most of the choices in the list above, one creates an instance of the *class* corresponing to the choice."
    ]
@@ -405,7 +415,9 @@
    "source": [
     "## Summary\n",
     "\n",
-    "An image needs to be background-subtracted before you detect the sources in the image. That background can be represented by either a single number (e.g. the mean or median) or by a two-dimensional image. In both cases the best estimate of the background is obtained when sources are masked out before estimating the background. Though this means doing two rounds of source detection, one to estimate the background and one for the actual source detection, the method of finding sources used above is reasonably fast."
+    "An image needs to be background-subtracted before you detect the sources in the image. That background can be represented by either a single number (e.g. the mean or median) or by a two-dimensional image. In both cases the best estimate of the background is obtained when sources are masked out before estimating the background. Though this means doing two rounds of source detection, one to estimate the background and one for the actual source detection, the method of finding sources used above is reasonably fast.\n",
+    "\n",
+    "Next, we will look at how to do background estimation for a couple of actual science images to get a more nuanced understanding of the choices in background subtraction."
    ]
   }
  ],
