--- a/notebooks/photometry/01.01.03-Background-estimation-FEDER.ipynb
+++ b/notebooks/photometry/01.01.03-Background-estimation-FEDER.ipynb
@@ -113,44 +113,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "url = 'https://archive.stsci.edu/pub/hlsp/xdf/hlsp_xdf_hst_acswfc-60mas_hudf_f435w_v1_sci.fits'\n",
-    "with fits.open(url) as hdulist:\n",
-    "    hdulist.info()\n",
-    "    data = hdulist[0].data\n",
-    "    header = hdulist[0].header"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "ccd = CCDData.read('TIC_125489084.01-S001-R055-C001-ip.fit')\n",
     "data = ccd.data\n",
     "header = ccd.header"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Modifying data\n",
-    "For the purposes of this notebook example, we're going to add a linear background effect from the top to the bottom of these data. But don't worry about this (pay no attention to that man behind the curtain!)."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mask = data == 0\n",
-    "n_data_pixels = len(data[~mask])\n",
-    "background = np.linspace(-1e-4, 5e-4, num=n_data_pixels)\n",
-    "\n",
-    "modified_data = np.copy(data)\n",
-    "modified_data[~mask] += background[:]"
    ]
   },
   {
@@ -191,13 +156,9 @@
     "# Set up the normalization and colormap\n",
     "norm_image = ImageNormalize(xdf_image, interval=AsymmetricPercentileInterval(30, 99.5))\n",
     "cmap = plt.get_cmap('viridis')\n",
-    "cmap.set_over(cmap.colors[-1])\n",
-    "cmap.set_under(cmap.colors[0])\n",
-    "\n",
-    "xdf_image_clipped = np.clip(xdf_image, 1e-4, None) # clip to plot with logarithmic stretch\n",
     "\n",
     "# Plot the data\n",
-    "fitsplot = ax1.imshow(np.ma.masked_where(xdf_image.mask, xdf_image_clipped),\n",
+    "fitsplot = ax1.imshow(np.ma.masked_where(xdf_image.mask, xdf_image),\n",
     "                      norm=norm_image, cmap=cmap)\n",
     "\n",
     "# Define the colorbar\n",
@@ -261,7 +222,7 @@
     "ax1.set_title('Mask')\n",
     "\n",
     "# Plot the masked data\n",
-    "fitsplot = ax2.imshow(np.ma.masked_where(xdf_image.mask, xdf_image_clipped),\n",
+    "fitsplot = ax2.imshow(np.ma.masked_where(xdf_image.mask, xdf_image),\n",
     "                      norm=norm_image, cmap=cmap)\n",
     "\n",
     "# Define the colorbar and fix the labels\n",
@@ -460,14 +421,14 @@
     "plt.tight_layout()\n",
     "\n",
     "# Plot the original data\n",
-    "fitsplot = ax1.imshow(np.ma.masked_where(xdf_image.mask, xdf_image_clipped), norm=norm_image)\n",
+    "fitsplot = ax1.imshow(np.ma.masked_where(xdf_image.mask, xdf_image), norm=norm_image)\n",
     "ax1.set_xlabel('X (pixels)')\n",
     "ax1.set_ylabel('Y (pixels)')\n",
     "ax1.set_title('Original Data')\n",
     "\n",
     "# Plot the subtracted data\n",
-    "xdf_scalar_bkgdsub_clipped = np.clip(xdf_scalar_bkgdsub + mean, 1e-4, None) # clip to plot with logarithmic stretch\n",
-    "fitsplot = ax2.imshow(xdf_scalar_bkgdsub_clipped, norm=norm_image)\n",
+    "# xdf_scalar_bkgdsub_clipped = np.clip(xdf_scalar_bkgdsub + mean, 1e-4, None) # clip to plot with logarithmic stretch\n",
+    "fitsplot = ax2.imshow(xdf_scalar_bkgdsub + mean, norm=norm_image)\n",
     "ax2.set_xlabel('X (pixels)')\n",
     "ax2.set_title('Scalar Background-Subtracted Data')\n",
     "\n",
@@ -554,11 +515,11 @@
     "fig, ax1 = plt.subplots(1, 1, figsize=(8, 8))\n",
     "\n",
     "# Plot the background\n",
-    "background_clipped = np.clip(bkg.background.data, 1e-4, None) # clip to plot with logarithmic stretch\n",
-    "fitsplot = ax1.imshow(np.ma.masked_where(xdf_image.mask, background_clipped), norm=norm_image)\n",
+    "#background_clipped = np.clip(bkg.background.data, 1e-4, None) # clip to plot with logarithmic stretch\n",
+    "fitsplot = ax1.imshow(np.ma.masked_where(xdf_image.mask, bkg.background.data), norm=norm_image)\n",
     "\n",
     "# Plot the meshes\n",
-    "bkg.plot_meshes(outlines=True, color='lightgrey')\n",
+    "#bkg.plot_meshes(outlines=True, color='lightgrey')\n",
     "\n",
     "# Define the colorbar\n",
     "cbar = plt.colorbar(fitsplot, fraction=0.046, pad=0.04)\n",
@@ -582,7 +543,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You might notice that not all areas of the background array have mesh boxes over them (look for those boxes that do not have a `+`). If you compare this background array with the original data, you'll see that these un-boxed areas contain particularly bright sources, and thus are not being included in the background estimate .\n",
+    "NOT NOT NOT You might notice that not all areas of the background array have mesh boxes over them (look for those boxes that do not have a `+`). If you compare this background array with the original data, you'll see that these un-boxed areas contain particularly bright sources, and thus are not being included in the background estimate .\n",
     "\n",
     "And how does the data look if we use this background subtraction method (again maintaining the attributes of the CCDData object)?"
    ]
@@ -608,10 +569,10 @@
     "plt.tight_layout()\n",
     "\n",
     "# Define the normalization\n",
-    "xdf_2d_bkgdsub_clipped = np.clip(xdf_2d_bkgdsub, 1e-4, None) # clip to plot with logarithmic stretch\n",
+    "#xdf_2d_bkgdsub_clipped = np.clip(xdf_2d_bkgdsub, 1e-4, None) # clip to plot with logarithmic stretch\n",
     "\n",
     "# Plot the scalar-subtracted data\n",
-    "fitsplot = ax1.imshow(xdf_scalar_bkgdsub_clipped, norm=norm_image)\n",
+    "fitsplot = ax1.imshow(xdf_scalar_bkgdsub + mean, norm=norm_image)\n",
     "cbar.set_label(r'Flux Count Rate ({})'.format(xdf_image.unit.to_string('latex')),\n",
     "               rotation=270, labelpad=30)\n",
     "ax1.set_ylabel('Y (pixels)')\n",
@@ -619,7 +580,7 @@
     "ax1.set_title('Scalar Background-Subtracted Data')\n",
     "\n",
     "# Plot the 2D-subtracted data\n",
-    "fitsplot = ax2.imshow(np.ma.masked_where(xdf_2d_bkgdsub.mask, xdf_2d_bkgdsub_clipped + mean), norm=norm_image)\n",
+    "fitsplot = ax2.imshow(np.ma.masked_where(xdf_2d_bkgdsub.mask, xdf_2d_bkgdsub + mean), norm=norm_image)\n",
     "ax2.set_xlabel('X (pixels)')\n",
     "ax2.set_title('2D Background-Subtracted Data')\n",
     "\n",
@@ -671,7 +632,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
