--- a/notebooks/photometry/01.01.02-Background-estimation-XDF.ipynb
+++ b/notebooks/photometry/01.01.02-Background-estimation-XDF.ipynb
@@ -4,38 +4,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Background Estimation with photutils"
+    "# Handling masking before background removal"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## What is background estimation?\n",
-    "In order to most accurately do photometric analysis of celestial sources in image data, it is important to estimate and subtract the image background. Any astronomical image will have background noise, due to both detector effects and background emission from the night sky. This noise can be modeled as uniform, or as varying with position on the detector. \n",
+    "## Data for this notebook \n",
     "\n",
-    "The `photutils` package provides tools for estimating 2-dimensional background flux, which can then be subtracted from an image to ensure the most accurate photometry possible.\n",
-    "\n",
-    "### What does this tutorial include?\n",
-    "This tutorial covers the basics of background estimation and subtraction, including the following methods:\n",
-    "- Scalar Background Estimation\n",
-    "- 2-D Background Estimation\n",
-    "\n",
-    "### Which data are used in this tutorial?\n",
-    "We will be manipulating Hubble eXtreme Deep Field (XDF) data, which was collected using the Advanced Camera for Surveys (ACS) on Hubble between 2002 and 2012. The image we use here is the result of 1.8 million seconds (500 hours!) of exposure time, and includes some of the faintest and most distant galaxies that have ever been observed. \n",
+    "We will be manipulating Hubble eXtreme Deep Field (XDF) data, which was collected using the Advanced Camera for Surveys (ACS) on Hubble between 2002 and 2012. The image we use here is the result of 1.8 million seconds (500 hours!) of exposure time, and includes some of the faintest and most distant galaxies that had ever been observed. \n",
     "\n",
     "Background subtraction is essential for accurate photometric analysis of astronomical data like the XDF.\n",
     "\n",
     "*The methods demonstrated here are available in narrative form within the `photutils.background` [documentation](http://photutils.readthedocs.io/en/stable/background.html).*"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "```{note}\n",
-    "This notebook focuses on *global* background estimation. *Local* background subtraction with annulus apertures is demonstrated in FILL ME IN.\n",
-    "```\n"
    ]
   },
   {
@@ -95,61 +77,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Retrieve data"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "As described in the introduction, we will be using Hubble eXtreme Deep Field (XDF) data. Since this file is too large to store on GitHub, we will just use `astropy` to directly download the file from the STScI archive: https://archive.stsci.edu/prepds/xdf/ \n",
-    "\n",
-    "(Generally, the best package for web queries of astronomical data is [Astroquery](https://astroquery.readthedocs.io/en/latest/); however, the dataset we are using is a High Level Science Product (HLSP) and thus is not located within a catalog that could be queried with Astroquery.)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "url = 'https://archive.stsci.edu/pub/hlsp/xdf/hlsp_xdf_hst_acswfc-60mas_hudf_f435w_v1_sci.fits'\n",
-    "with fits.open(url) as hdulist:\n",
-    "    hdulist.info()\n",
-    "    data = hdulist[0].data\n",
-    "    header = hdulist[0].header"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Modify data by adding gradient\n",
-    "\n",
-    "For the purposes of this notebook example, we're going to add a linear background effect from the top to the bottom of these data. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mask = data == 0\n",
-    "n_data_pixels = len(data[~mask])\n",
-    "background = np.linspace(-1e-4, 5e-4, num=n_data_pixels)\n",
-    "\n",
-    "modified_data = np.copy(data)\n",
-    "modified_data[~mask] += background[:]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Data representation\n",
     "\n",
-    "Throughout this notebook, we are going to store our images in Python using a `CCDData` object (see [Astropy documentation](http://docs.astropy.org/en/stable/nddata/index.html#ccddata-class-for-images)), which contains a `numpy` array in addition to metadata such as uncertainty, masks, or units. In this case, each image has units electrons (counts) per second."
+    "Throughout this notebook, we are going to store our images in Python using a `CCDData` object (see [Astropy documentation](http://docs.astropy.org/en/stable/nddata/index.html#ccddata-class-for-images)), which contains a `numpy` array in addition to metadata such as uncertainty, masks, or units. In this case, each image has units electrons (counts) per second.\n",
+    "\n",
+    "Note that you could create the `CCDData` object directly from the URL where this image is taken from:\n",
+    "\n",
+    "```python\n",
+    "url = 'https://archive.stsci.edu/pub/hlsp/xdf hlsp_xdf_hst_acswfc-60mas_hudf_f435w_v1_sci.fits'\n",
+    "xdf_image = CCDData(url)\n",
+    "```\n",
+    "\n",
+    "Since the data for the guide is meant to be downloaded in bulk before going through the guide, we read the image from disk here.\n"
    ]
   },
   {
@@ -158,15 +97,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "unit = u.electron / u.s\n",
-    "xdf_image = CCDData(modified_data, unit=unit, meta=header)"
+    "xdf_image = CCDData('hlsp_xdf_hst_acswfc-60mas_hudf_f435w_v1_sci.fits')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's look at the data:"
+    "Let's look at the data, including the background we've added. The cell below sets up an image normaliztaion we will use for all of our later views of the image. It also defines a small function, `format_colorbar` that is used to set up the colorbar in the subsequent plots."
    ]
   },
   {
@@ -287,11 +225,15 @@
    "source": [
     "Now that the data are properly masked, we can calculate some basic statistical values to do a scalar estimation of the image background. \n",
     "\n",
+    "Following the example in the previous section, we will estimate the background several ways.\n",
+    "\n",
     "By \"scalar estimation\", we mean the calculation of a single value (such as the mean or median) to represent the value of the background for our entire two-dimensional dataset. This is in contrast to a two-dimensional background, where the estimated background is represented as an array of values that can vary spatially with the dataset. We will calculate a 2D background in the upcoming section.\n",
     "\n",
-    "### Calculate scalar background value\n",
+    "### Calculate scalar background value with sigma clipping\n",
     "\n",
-    "Here we will calculate the mean, median, and mode of the dataset using sigma clipping. With sigma clipping, the data is iteratively clipped to exclude data points outside of a certain sigma (standard deviation), thus removing some of the noise from the data before determining statistical values."
+    "Here we will calculate the mean, median, and mode of the dataset using sigma clipping. With sigma clipping, the data is iteratively clipped to exclude data points outside of a certain sigma (standard deviation), thus removing some of the noise from the data before determining statistical values.\n",
+    "\n",
+    "In the first case we account for the mask while sigma clipping and in the second case we do not. "
    ]
   },
   {
@@ -311,7 +253,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Calculate scalar bkdg value without sigma clipping\n",
+    "### Calculate scalar background value without sigma clipping\n",
     "\n",
     "Here we will calculate the mean, median, and mode of the dataset without using sigma clipping. \n",
     "\n",
@@ -367,6 +309,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Compare the background estimates\n",
+    "\n",
     "But what difference does this sigma clipping make? And how important is masking, anyway? Let's visualize these statistics to get an idea:"
    ]
   },
@@ -417,8 +361,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Just from simply looking at the distribution of the data, it is pretty easy to see how sigma-clipping and masking improve the calculation of the mean and median: the masked and sigma-clipped values are closest to the center of the distribution in both cases. It's also worthwhile to note that the median does a better job even without masking or clipping! Finally, note that using the median with sigma clipping gets essentially the same results as masking the sources along with sigma clipping.\n",
+    "Masking makes a big difference to the mean in this case because so many of the pixels in the original image contain no data. Sigma clipping also makes some difference, moving the mean value closer to zero. Masking out the sources moves the mean below zero, which is not surprising in this case. The distribution of pixels is clearly near zero, and masking out the sources means removing the largest positive values.\n",
     "\n",
+    "Note that the median is about the same no matter which approach you use.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Subtract scalar background value\n",
     "\n",
     "But enough looking at numbers, let's actually remove the background from the data. By using the `subtract()` method of the `CCDData` class, we can subtract the mean background while maintaining the metadata and mask of our original CCDData object:"
@@ -472,7 +423,9 @@
    "source": [
     "Note that both plots above use the same normalization scheme, represented by the colorbar on the right. That is to say, if two pixels have the same color in both arrays, they have the same value.\n",
     "\n",
-    "That looks better! You can tell that the background is darker, especially in the top corner. However, the background still does not seem to be completely removed. In this case, the background varies spatially; it is two-dimensional. Thankfully, `photutils` includes functions to remove background like this."
+    "Subtracting the scalar background does not have much effect here because the background is so close to zero.\n",
+    "\n",
+    "One note about keeping the color scale the same, as we do in this example: if there is a significant scalar background then the effect of scalar background subtraction will be to simply make the entire image look darker. That will be illustrated in the next example."
    ]
   },
   {
@@ -486,14 +439,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The `Background2D` class allows users to model 2-dimensional backgrounds, by calculating the mean or median in small boxes, and smoothing these boxes to reconstruct a continuous 2D background. The class includes the following arguments/attributes:\n",
+    "The `Background2D` class in `photutils` allows users to model 2-dimensional backgrounds, by calculating the mean or median in small boxes, and smoothing these boxes to reconstruct a continuous 2D background. The class includes the following arguments/attributes:\n",
     "* **`box_size`** &mdash; the size of the boxes used to calculate the background. This should be larger than individual sources, yet still small enough to encompass changes in the background.\n",
     "* **`filter_size`** &mdash; the size of the median filter used to smooth the final 2D background. The dimension should be odd along both axes.\n",
     "* **`filter_threshold`** &mdash; threshold below which the smoothing median filter will not be applied.\n",
     "* **`sigma_clip`** &mdash; an ` astropy.stats.SigmaClip` object that is used to specify the sigma and number of iterations used to sigma-clip the data before background calculations are performed.\n",
     "* **`bkg_estimator`** &mdash; the method used to perform the background calculation in each box (mean, median, SExtractor algorithm, etc.).\n",
     "\n",
-    "For this example, we will use the `MeanBackground` estimator."
+    "For this example, we will use the `MeanBackground` estimator. Note though, that there is little or no spatial variation apparent in the background of this image."
    ]
   },
   {
@@ -556,7 +509,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You might notice that not all areas of the background array have mesh boxes over them (look for those boxes that do not have a `+`). If you compare this background array with the original data, you'll see that these un-boxed areas contain particularly bright sources, and thus are not being included in the background estimate .\n",
+    "You might notice that not all areas of the background array have mesh boxes over them (look for those boxes that do not have a `+`). If you compare this background array with the original data, you'll see that these un-boxed areas contain particularly bright sources, and thus are not being included in the background estimate.\n",
+    "\n",
+    "The background is also, as we expected in this case, close to uniform.\n",
     "\n",
     "And how does the data look if we use this background subtraction method (again maintaining the attributes of the CCDData object)?"
    ]
@@ -613,16 +568,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note how much more even the 2D background-subtracted image looks; especially the difference between these two images in the bottom corner and top corner. This makes sense, as the background that `Background2D` identified was a gradient from the top corner down to the bottom!"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Conclusions\n",
+    "In this case 2D background subtraction was not necessary, as you might expect from an image like the XDF that has already been processed.\n",
     "\n",
-    "The `photutils` package provides a powerful tool in the `Background2D` class, allowing users to easily estimate and subtract spatially variant background signals from their data.\n"
+    "In the next section we look at an image that does have a gradient in the background from moonlight."
    ]
   }
  ],
@@ -642,7 +590,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
